// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Masonry gallery > Match snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="_masonry_0a77d1"
        style="--column-count: 3;"
      >
        <div
          class="_column_225756"
        >
          <div
            class="_block_229b1d"
          >
            1
          </div>
          <div
            class="_block_229b1d"
          >
            2
          </div>
          <div
            class="_block_229b1d"
          >
            3
          </div>
        </div>
        <div
          class="_column_225756"
        >
          <div
            class="_block_229b1d"
          >
            4
          </div>
          <div
            class="_block_229b1d"
          >
            5
          </div>
          <div
            class="_block_229b1d"
          >
            6
          </div>
        </div>
        <div
          class="_column_225756"
        >
          <div
            class="_block_229b1d"
          >
            7
          </div>
          <div
            class="_block_229b1d"
          >
            8
          </div>
          <div
            class="_block_229b1d"
          >
            9
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="_masonry_0a77d1"
      style="--column-count: 3;"
    >
      <div
        class="_column_225756"
      >
        <div
          class="_block_229b1d"
        >
          1
        </div>
        <div
          class="_block_229b1d"
        >
          2
        </div>
        <div
          class="_block_229b1d"
        >
          3
        </div>
      </div>
      <div
        class="_column_225756"
      >
        <div
          class="_block_229b1d"
        >
          4
        </div>
        <div
          class="_block_229b1d"
        >
          5
        </div>
        <div
          class="_block_229b1d"
        >
          6
        </div>
      </div>
      <div
        class="_column_225756"
      >
        <div
          class="_block_229b1d"
        >
          7
        </div>
        <div
          class="_block_229b1d"
        >
          8
        </div>
        <div
          class="_block_229b1d"
        >
          9
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Masonry gallery > Match snapshot 2`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="_masonry_0a77d1"
        style="--column-count: 3;"
      >
        <div
          class="_column_225756"
        >
          <div
            class="_block_229b1d"
          >
            1
          </div>
          <div
            class="_block_229b1d"
          >
            2
          </div>
          <div
            class="_block_229b1d"
          >
            3
          </div>
        </div>
        <div
          class="_column_225756"
        >
          <div
            class="_block_229b1d"
          >
            4
          </div>
          <div
            class="_block_229b1d"
          >
            5
          </div>
          <div
            class="_block_229b1d"
          >
            6
          </div>
        </div>
        <div
          class="_column_225756"
        >
          <div
            class="_block_229b1d"
          >
            7
          </div>
          <div
            class="_block_229b1d"
          >
            8
          </div>
          <div
            class="_block_229b1d"
          >
            9
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="_masonry_0a77d1"
        style="--column-count: 4;"
      >
        <div
          class="_column_225756"
        >
          <div
            class="_block_229b1d"
          >
            1
          </div>
          <div
            class="_block_229b1d"
          >
            2
          </div>
          <div
            class="_block_229b1d"
          >
            3
          </div>
        </div>
        <div
          class="_column_225756"
        >
          <div
            class="_block_229b1d"
          >
            4
          </div>
          <div
            class="_block_229b1d"
          >
            5
          </div>
          <div
            class="_block_229b1d"
          >
            6
          </div>
        </div>
        <div
          class="_column_225756"
        >
          <div
            class="_block_229b1d"
          >
            7
          </div>
          <div
            class="_block_229b1d"
          >
            8
          </div>
          <div
            class="_block_229b1d"
          >
            9
          </div>
        </div>
        <div
          class="_column_225756"
        >
          <div
            class="_block_229b1d"
          >
            7
          </div>
          <div
            class="_block_229b1d"
          >
            8
          </div>
          <div
            class="_block_229b1d"
          >
            9
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="_masonry_0a77d1"
      style="--column-count: 4;"
    >
      <div
        class="_column_225756"
      >
        <div
          class="_block_229b1d"
        >
          1
        </div>
        <div
          class="_block_229b1d"
        >
          2
        </div>
        <div
          class="_block_229b1d"
        >
          3
        </div>
      </div>
      <div
        class="_column_225756"
      >
        <div
          class="_block_229b1d"
        >
          4
        </div>
        <div
          class="_block_229b1d"
        >
          5
        </div>
        <div
          class="_block_229b1d"
        >
          6
        </div>
      </div>
      <div
        class="_column_225756"
      >
        <div
          class="_block_229b1d"
        >
          7
        </div>
        <div
          class="_block_229b1d"
        >
          8
        </div>
        <div
          class="_block_229b1d"
        >
          9
        </div>
      </div>
      <div
        class="_column_225756"
      >
        <div
          class="_block_229b1d"
        >
          7
        </div>
        <div
          class="_block_229b1d"
        >
          8
        </div>
        <div
          class="_block_229b1d"
        >
          9
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
